[package]
name = "tradingview-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
json_dotpath = "1.1.0"
native-tls = "0.2.11"
rand = "0.8.5"
regex = "1.9.5"
serde_json = "1.0.107"
